--- a/user/templates/user/forgot-password.html
+++ b/user/templates/user/forgot-password.html
@@ -1,46 +1,31 @@
 {% extends 'base.html' %}
-
-{% block head %}
-<title>Forgot password</title>
-<style>
-    .login-row {
-        min-height: 80vh;
-        padding: 100px 0;
-    }
-</style>
-{% endblock %}
+{% block title %}Forgot Password{% endblock %}
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-12 login-row">
-            <div class="col-12">
+            <div>
                 {% if status == 'success' %}
-                    <div class="alert alert-success" role="alert">
-                      Ссылка была отправлена на твой email!
+                    <div role="alert">
+                      The link has been sent to your email!
                     </div>
                 {% endif %}
 
                 {% if status == 'failed' %}
-                    <div class="alert alert-danger" role="alert">
-                      Что-то пошло не так!
+                    <div role="alert">
+                      Something went wrong!
                     </div>
                 {% endif %}
 
-                <form name="forgot_password" method="POST" novalidate>
-                    <h2>Забыли пароль</h2>
+                <form name="forgot_password" method="POST" novalidate class="password-form">
+                    <h2>Forgotten password</h2>
                     {% csrf_token %}
                     {% for field in form %}
-                    <div class="field-wrapper mt-4">
+                    <div>
                         {{ field.label_tag }} {{ field }}
-                        <div class="text-danger">
+                        <div>
                             {{ field.errors }}
                         </div>
                     </div>
                     {% endfor %}
-                    <button class="btn btn-primary d-block col-12 mt-4" type="submit">Отправить</button>
+                    <button type="submit">Send</button>
                 </form>
             </div>
-        </div>
-    </div>
-</div>
 {% endblock %}
