--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -1,40 +1,24 @@
 {% extends 'base.html' %}
 
-{% block head %}
-<title>Login</title>
-<style>
-    .login-row {
-        min-height: 80vh;
-        padding: 100px 0;
-    }
-</style>
-
-
-{% endblock %}
-
+{% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-12 login-row">
-            <div class="col-12">
+            <div class="login-container">
                 <form name="login" method="POST" novalidate>
-                    <h2>Вход</h2>
+                    <h2>Login</h2>
                     {% csrf_token %}
                     {% for field in form %}
-                    <div class="field-wrapper mt-4">
+                    <div>
                         {{ field.label_tag }} {{ field }}
-                        <div class="text-danger">
+                        <div>
                             {{ field.errors }}
                         </div>
                     </div>
                     {% endfor %}
-                    <button class="btn btn-primary d-block col-12 mt-4" type="submit">Войти</button>
-                    <a href="/auth/register/" class="d-block text-center mt-4">Нет аккаунта? Зарегистрироваться</a>
-                    <a href="/auth/forgot-password/" class="d-block text-center mt-4">Забыли пароль?</a>
-                </form>
+                    </br>
+                    <button type="submit">Sign In</button>
+                    </form>
+                <p>Don`t have account?<a class="exist" href="{% url 'register' %}">Sign Up</a></p>
+                <p><a class="exist" href="{% url 'forgot_password' %}">Forgot your password?</a></p>
             </div>
-        </div>
-    </div>
-</div>
 {% endblock %}
