--- a/user/templates/user/reset-password.html
+++ b/user/templates/user/reset-password.html
@@ -1,52 +1,37 @@
 {% extends 'base.html' %}
-
-{% block head %}
-<title>Reset password</title>
-<style>
-    .login-row {
-        min-height: 80vh;
-        padding: 100px 0;
-    }
-</style>
-{% endblock %}
+{% block title %}Reset Password{% endblock %}
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-12 login-row">
-            <div class="col-12">
+            <div>
                 {% if status == 'success' %}
-                    <div class="alert alert-success" role="alert">
+                    <div>
                       Your password is reset successfully!
                     </div>
                 {% endif %}
 
                 {% if status == 'failed' %}
-                    <div class="alert alert-danger" role="alert">
+                    <div role="alert">
                       Something went wrong!
                     </div>
                 {% endif %}
 
                 {% if message|length > 0 %}
-                    <div class="alert alert-danger" role="alert">
+                    <div role="alert">
                       {{ message }}
                     </div>
                 {% endif %}
 
-                <form name="reset_password" method="POST" novalidate>
-                    <h2>Forgot Password</h2>
+                <form name="reset_password" method="POST" novalidate class="password-form">
+                    <h2>Сброс пароля</h2>
                     {% csrf_token %}
                     {% for field in form %}
-                    <div class="field-wrapper mt-4">
+                    <div>
                         {{ field.label_tag }} {{ field }}
-                        <div class="text-danger">
+                        <div>
                             {{ field.errors }}
                         </div>
                     </div>
                     {% endfor %}
-                    <button class="btn btn-primary d-block col-12 mt-4" type="submit">Submit</button>
+                    <button type="submit">Submit</button>
                 </form>
             </div>
-        </div>
-    </div>
-</div>
 {% endblock %}
