--- a/tasks/templates/tasks/task_delete.html
+++ b/tasks/templates/tasks/task_delete.html
@@ -7,7 +7,7 @@
 <p>{{ task.title }}</p>
 <form method="post">
     {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Confirm Delete</button>
-    <a href="{% url 'task_list' %}" class="btn btn-secondary">Cancel</a>
+    <button type="submit">Confirm Delete</button>
+    <a href="{% url 'task_list' %}">Cancel</a>
 </form>
 {% endblock %}
