--- a/tasks/templates/tasks/task_form.html
+++ b/tasks/templates/tasks/task_form.html
@@ -7,6 +7,6 @@
 <form method="post" novalidate>
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-success">Save Task</button>
+    <button type="submit">Save Task</button>
 </form>
 {% endblock %}
