--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -1,43 +1,22 @@
 {% extends 'base.html' %}
-{% block head %}
-  <title>Registration</title>
-  <style>
-      .field-wrapper {
-        margin-top: 10px;
-        margin-bottom: 10px;
-      }
-      .login-row {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-  </style>
-{% endblock %}
+{% block title %}Registration{% endblock %}
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-12 login-row">
-            <div class="col-2"></div>
-            <div class="col-8">
+            <div class="register-container">
                 <form name="registration" method="POST">
-                    <h2>Регистрация</h2>
+                    <h2>Registration</h2>
                     {% csrf_token %}
                     {% for field in form %}
-                        <div class="field-wrapper">
+                        <div>
                             {{ field.label_tag }}
                             {{ field }}
-                            <div class="text-danger">
+                            <div>
                                 {{ field.errors }}
                             </div>
                         </div>
                     {% endfor %}
-                    <button class="btn btn-lg btn-primary btn-block col-12" type="submit">Зарегистрироваться</button>
+                    </br>
+                    <button type="submit">Sign Up</button>
                 </form>
-            <a href="/auth/login/" class="block">У вас уже есть аккаунт? Войти</a>
+                <p>Already have an account?<a class="exist" href="{% url 'login' %}">Sign In</a></p>
             </div>
-        </div>
-    </div>
-  </div>
 {% endblock %}
-
